chandeliers-lus/tests/compile_fail/ui/clk/too-fast.stderr
error: Two subexpressions have different clocks: 'when b and 'self are incompatible
 --> tests/compile_fail/ui/clk/too-fast.rs:8:9
  |
8 |         n = if b then 1 else 2;
  |         ^^^^^^^^^^^^^^^^^^^^^^
  |
note: This is clocked by 'when b
 --> tests/compile_fail/ui/clk/too-fast.rs:8:9
  |
8 |         n = if b then 1 else 2;
  |         ^
note: defined here
 --> tests/compile_fail/ui/clk/too-fast.rs:5:22
  |
5 |         n : int when b;
  |                      ^
note: This is clocked by 'self
 --> tests/compile_fail/ui/clk/too-fast.rs:8:13
  |
8 |         n = if b then 1 else 2;
  |             ^^^^^^^^^^^^^^^^^^
  = note: some operations (notably assignment) have stricter requirements than others on clock equality
  = note: you may need to insert a `when` operator
